--- a/TelaLogin/pom.xml
+++ b/TelaLogin/pom.xml
@@ -45,4 +45,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE250</version>
+        </dependency>
+    </dependencies>
 </project>
