--- a/TelaAluno/pom.xml
+++ b/TelaAluno/pom.xml
@@ -11,4 +11,11 @@
         <exec.mainClass>com.mycompany.mavenproject1.TelaInicial</exec.mainClass>
     </properties>
     <name>TelaAluno</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE250</version>
+        </dependency>
+    </dependencies>
 </project>
