--- a/TelaInicioProfessor/pom.xml
+++ b/TelaInicioProfessor/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>br.poliedro.telainicioprofessor.TelaInicioProfessor</exec.mainClass>
+        <exec.mainClass>br.poliedro.telainicioprofessor.telas.InicioTela</exec.mainClass>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
